@@ -1,5 +1,6 @@
 Changes in Version 1.3.1
   o 'sendplot' package moved from imports to suggests list.
+  o Added the function 'qgraphMixed' which is designed to plot graphs that contain both undirected and directed edges.
 
 Changes in Version 1.3
 o New Features
